# mikage

./: .gitignore  .ignore  Cargo.toml  README.md  build.rs  docker-compose.yml  example.mikage.toml
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: lib.rs  state.rs
api/src/routes/: mod.rs  twitter.rs
core/: Cargo.toml
core/src/: lib.rs  mutation.rs  query.rs  spotify.rs  state.rs
core/src/services/: mod.rs  twitter_oauth2_service.rs  user_service.rs
core/src/spotify/: auth.rs  client.rs  mod.rs
core/src/twitter/: auth.rs  client.rs  mod.rs
entity/: Cargo.toml
entity/src/: lib.rs  spotify_account.rs  twitter_account.rs  user.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230120_220301_oauth2_account_tables.rs
src/: conf.rs  config.rs  db.rs  main.rs  twitter.rs
src/app/: init.rs  mod.rs  run.rs
src/mikage/: mod.rs  spotify.rs
src/mikage/app/: mod.rs
src/mikage/conf/: mod.rs  oauth2_credentials.rs
src/mikage/music_url/: mod.rs  spotify.rs
src/oauth2/: mod.rs  spotify.rs
src/old/: mod.rs
src/old/mikage/: mod.rs
src/old/mikage/app/: mod.rs
src/old/mikage/conf/: mod.rs
src/old/mikage/music_url/: spotify.rs
src/old/spotify/: client.rs
src/routes/: mod.rs
src/server/: mod.rs  state.rs
src/server/routes/: login.rs  mod.rs
src/service/: mod.rs
src/spotify/: client.rs  mod.rs  oauth2_client.rs
src/twitter/: mod.rs
