[package]
name = "mikage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
async-trait = "0.1.58"
clap = { version = "3.2.12", features = ["derive"] }
derive-new = "0.5.9"
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.17"
log4rs = "1.1.1"
oauth2 = "4.2.3"
once_cell = "1.13.0"
paste = "1.0.9"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
sled = "0.34.7"
static-files = "0.2.3"
time = { version = "0.3.11", features = ["macros"] }
tokio = { version = "1.20.0", features = ["full"] }
toml = "0.5.9"
twitter-v2 = { git = "https://github.com/ekuinox/jpopesculian-twitter-v2-rs.git", rev = "352e9880dc5c1c3933f65cc3b550415f0b0ab2e3" }
warp = "0.3.3"

[build-dependencies]
anyhow = "1.0.58"
static-files = "0.2.3"
