[workspace]
members = [".", "entity", "migration", "core", "api"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "mikage"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
actix-web = { workspace = true }
actix-web-static-files = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "3.2.12", features = ["derive"] }
derive-new = { workspace = true }
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.17"
log4rs = "1.1.1"
oauth2 = { workspace = true }
once_cell = "1.13.0"
paste = "1.0.9"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = "0.34.7"
static-files = { workspace = true }
time = { version = "0.3.11", features = ["macros"] }
tokio = { workspace = true }
toml = "0.5.9"
twitter-v2 = { workspace = true }
warp = "0.3.3"
chrono = { workspace = true }
env_logger = "0.10.0"

[build-dependencies]
anyhow = "1.0.58"
static-files = { workspace = true }

[dependencies.entity]
path = "./entity"

[dependencies.migration]
path = "./migration"

[dependencies.envy]
version = "^0.4.2"

[dependencies.dotenvy]
version = "^0.15.0"

[dependencies.sea-orm]
workspace = true

[workspace.dependencies.anyhow]
version = "1.0.58"
features = ["backtrace"]

[workspace.dependencies.chrono]
version = "0.4.23"

[workspace.dependencies.oauth2]
version = "4.2.3"

[workspace.dependencies.serde]
version = "1.0.139"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.82"

[workspace.dependencies.derive-new]
version = "0.5.9"

[workspace.dependencies.reqwest]
version = "0.11.11"
features = ["json"]

[workspace.dependencies.async-trait]
version = "0.1.58"

[workspace.dependencies.twitter-v2]
git = "https://github.com/ekuinox/jpopesculian-twitter-v2-rs.git"
rev = "352e9880dc5c1c3933f65cc3b550415f0b0ab2e3"

[workspace.dependencies.actix-web]
version = "4.2.1"

[workspace.dependencies.actix-web-static-files]
version = "4.0.0"

[workspace.dependencies.static-files]
version = "0.2.3"

[workspace.build-dependencies.static-files]
version = "0.2.3"

[workspace.dependencies.tokio]
version = "1.20.0"
features = ["full"]

[workspace.dependencies.sea-orm]
version = "^0.10.3"
features = ["debug-print", "sqlx-postgres", "runtime-tokio-rustls"]

[workspace.dependencies.axum]
version = "^0.6.2"
