[package]
name = "api"
version = { workspace = true }
edition = { workspace = true }

[dependencies.core]
path = "../core"

[dependencies.anyhow]
workspace = true

[dependencies.actix-web]
workspace = true

[dependencies.actix-web-static-files]
workspace = true

[dependencies.static-files]
workspace = true

[dependencies.tokio]
workspace = true

[build-dependencies.static-files]
workspace = true
