[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.entity]
path = "../entity"

[dependencies.sea-orm]
version = "^0.10.3"
features = ["debug-print", "sqlx-postgres"]

[dependencies.anyhow]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.oauth2]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.derive-new]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.twitter-v2]
workspace = true
